--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
       font-family: ui-monospace, SFMono-Regular, Menlo, Consolas, monospace;
       color: #0f0;
     }
+    .note {
+      margin-top: 1.5rem;
+      font-size: 1.1rem;
+      font-weight: 700;
+      color: #fff;
+    }
     .btn {
       display: inline-block;
-      margin-top: 1rem;
+      margin-top: 1.5rem;
       padding: 0.75rem 1.2rem;
       border-radius: 6px;
       text-decoration: none;
@@ -56,6 +62,8 @@
 
     <p>Log in through Zoho Mail using your address:</p>
     <p><code>first-letter-of-your-name@pboro.ibrahimweb.co.uk</code></p>
+
+    <p class="note">Password can be found in the old iPhone SE (pink case) and in the Apple Photos app.</p>
 
     <a class="btn" href="https://mail.zoho.eu/zm/" rel="noopener">Open Zoho Mail</a>
   </main>
