--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
 </head>
 <body>
   <main class="card">
-    <h1>Welcome to <strong>ibrahimweb</strong> mail</h1>
+    <h1>Welcome to <em>ibrahimweb</em> mail</h1>
     <p class="sub">pboro.ibrahimweb.co.uk</p>
 
     <p>Log in through Zoho Mail using your address:</p>
     <p><code>first-letter-of-your-name@pboro.ibrahimweb.co.uk</code></p>
 
-    <p class="note">Password can be found in the old iPhone SE (pink case) and in the Apple Photos app.</p>
+    <p class="note">Password can be found in the old iPhone SE (pink case) in the Apple Photos app.</p>
 
     <a class="btn" href="https://mail.zoho.eu/zm/" rel="noopener">Open Zoho Mail</a>
   </main>
