--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
     <p class="sub">pboro.ibrahimweb.co.uk</p>
 
     <p>Log in through Zoho Mail using your address:</p>
-    <p><code>first-letter-of-your-name@pboro.ibrahimweb.co.uk</code></p>
+    <p><code>[first letter]@pboro.ibrahimweb.co.uk</code></p>
 
-    <p class="note">Password can be found in the old iPhone SE (pink case) in the Apple Photos app.</p>
+    <p class="note">Password can be found in the old iPhone SE (pink case) in Apple Photos. COOL GPT-5 WEBSITE .</p>
 
     <a class="btn" href="https://mail.zoho.eu/zm/" rel="noopener">Open Zoho Mail</a>
   </main>
